CORE-12555: Create an OSGi-capable JdkProxySerializer for Kryo. (#158)