@@ -179,6 +179,13 @@ subprojects {
 
     tasks.named('test', Test) {
         dependsOn tasks.named('jar', Jar)
+
+        // Quasar needs reflective access to these packages.
+        jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+                '--illegal-access=warn'
     }
 
     tasks.withType(Test).configureEach {
